# project_mml

./: .gitignore  Pytorch_VAE_CNN.py  Pytorch_VAE_LSTM.py  README.md  VAE_CNN_training.ipynb  VAE_LSTM.pt  VAE_LSTM_training.ipynb  cVAE_LSTM_training.ipynb  cVAE_generation.ipynb  full_gan.ipynb  fully_connected_VAE.ipynb  loss_LSTM_VAE.npy  preprocessing.ipynb  preprocessing_fcVAE.ipynb  pyproject.toml
.ipynb_checkpoints/: Pytorch_VAE_LSTM-checkpoint.py
cnn_vae/generated_spectrograms/: generated_magnitude_0.npy  generated_magnitude_1.npy  generated_magnitude_2.npy  generated_magnitude_3.npy  generated_magnitude_4.npy  generated_phase_0.npy  generated_phase_1.npy  generated_phase_2.npy  generated_phase_3.npy  generated_phase_4.npy
conditional_VAE_stack_seconds/: Pytorch_VAE_LSTM.py  cVAE_LSTM_training.ipynb  music_dataset.py
conditional_vae/: losses.json
conv1d/: CVAE.py  loss.json  music_dataset.py  test.ipynb
dataset/: 0_preprocessing.ipynb  music_dataset.py
dataset/modules/: music_dataset.py  music_dataset_usage.ipynb
dataset/notebooks/: 1_to_tf_records.ipynb  analysis.parquet
gan/: gan_reduce.ipynb  global_stft_stats.pkl  wgan.ipynb
gan/.ipynb_checkpoints/: GAN-checkpoint.ipynb  full_learning_rate-checkpoint.ipynb  gan_retrain-checkpoint.ipynb
stft/: spectrograms.py
stft/.ipynb_checkpoints/: generate_spectrograms-checkpoint.py
vlsmt_spec/: music_dataset.py  vlstm_spec.pt  vlstm_spec_training.ipynb
vlstm_spec/: vlstm_spec.py
